--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,6 +219,7 @@ export(has_fractions_difference)
 export(imputation_rule)
 export(keep_content_rows)
 export(keep_rows)
+export(labels_use_control)
 export(level_order)
 export(logistic_regression_cols)
 export(logistic_summary_by_flag)
