--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,7 @@ reference:
       - default_stats_formats_labels
       - starts_with("h_")
       - imputation_rule
+      - labels_use_control
       - starts_with("or_")
       - starts_with("prop_")
       - -starts_with("h_col_")
