Add tests, example

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(a_odds_ratio)
 export(a_proportion)
 export(a_proportion_diff)
 export(a_summary)
+export(a_surv_time)
 export(add_riskdiff)
 export(add_rowcounts)
 export(aesi_label)
@@ -219,6 +220,7 @@ export(has_fractions_difference)
 export(imputation_rule)
 export(keep_content_rows)
 export(keep_rows)
+export(labels_use_control)
 export(level_order)
 export(logistic_regression_cols)
 export(logistic_summary_by_flag)
