--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(a_odds_ratio)
 export(a_proportion)
 export(a_proportion_diff)
 export(a_summary)
+export(a_surv_time)
 export(add_riskdiff)
 export(add_rowcounts)
 export(aesi_label)
