--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -41,6 +41,9 @@ reference:
           Analyze functions with their corresponding statistics functions and
           formatted analysis functions.
 
+          - **Analyze functions** are used in combination with `rtables`
+            layout functions in the pipeline which creates the table.
+
           - **Statistics functions** (denoted by `s_` prefix) compute the
             numbers that are tabulated later. In order to separate computation
             from formatting, they do not take care of `rcell` type formatting
@@ -51,8 +54,6 @@ reference:
             be further customized by calling `rtables::make_afun()` on them.
             They are used as `afun` in `rtables::analyze()`.
 
-          - **Analyze functions** are used in combination with `rtables`
-            layout functions in the pipeline which creates the table.
     contents:
       - starts_with("analyze_", internal = TRUE)
       - compare_vars
@@ -62,7 +63,10 @@ reference:
       - starts_with("surv_", internal = TRUE)
       - starts_with("tabulate_", internal = TRUE)
       - test_proportion_diff
+      - -analyze_colvars_functions
+      - -analyze_functions
       - -estimate_coef
+      - -summarize_functions
 
   - title: Analysis Helper Functions
     desc: These functions are useful in defining an analysis.
