--- a/NAMESPACE
+++ b/NAMESPACE
@@ -241,6 +241,7 @@ export(prop_wald)
 export(prop_wilson)
 export(reapply_varlabels)
 export(ref_group_position)
+export(rtable2gg)
 export(s_compare)
 export(s_count_occurrences)
 export(s_count_occurrences_by_grade)
