--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -69,7 +69,7 @@ Config/Needs/verdepcheck: insightsengineering/rtables, tidymodels/broom,
     GeoBosh/Rdpack, r-lib/rlang, r-lib/scales, tidyverse/tibble,
     tidyverse/tidyr, yihui/knitr, deepayan/lattice, tidyverse/lubridate,
     insightsengineering/nestcolor, rstudio/rmarkdown, tidyverse/stringr,
-    r-lib/testthat, r-lib/vdiffr
+    r-lib/svglite, r-lib/testthat, r-lib/vdiffr
 Config/Needs/website: insightsengineering/nesttemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
