--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,6 +54,7 @@ Suggests:
     nestcolor (>= 0.1.1),
     rmarkdown (>= 2.19),
     stringr (>= 1.4.1),
+    svglite (>= 2.1.2),
     testthat (>= 3.1.9),
     vdiffr (>= 1.0.7)
 VignetteBuilder:
@@ -68,7 +69,7 @@ Config/Needs/verdepcheck: insightsengineering/rtables, tidymodels/broom,
     GeoBosh/Rdpack, r-lib/rlang, r-lib/scales, tidyverse/tibble,
     tidyverse/tidyr, yihui/knitr, deepayan/lattice, tidyverse/lubridate,
     insightsengineering/nestcolor, rstudio/rmarkdown, tidyverse/stringr,
-    r-lib/testthat, r-lib/vdiffr
+    r-lib/svglite, r-lib/testthat, r-lib/vdiffr
 Config/Needs/website: insightsengineering/nesttemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
