Add general default for `na_str` (#1145)
Fixes #1113

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(d_test_proportion_diff)
 export(day2month)
 export(decorate_grob)
 export(decorate_grob_set)
+export(default_na_str)
 export(df_explicit_na)
 export(draw_grob)
 export(estimate_incidence_rate)
@@ -261,6 +262,7 @@ export(score_occurrences)
 export(score_occurrences_cols)
 export(score_occurrences_cont_cols)
 export(score_occurrences_subtable)
+export(set_default_na_str)
 export(split_cols_by_groups)
 export(stack_grobs)
 export(stat_mean_ci)
