add `h_glm_negbin()` (#1163)
Close #856 

- Implement `h_glm_negbin()`.
- Add unit tests.
- Update `NEWS.md`.

---------

Co-authored-by: Joe Zhu <joe.zhu@roche.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
     labeling,
     lifecycle (>= 0.2.0),
     magrittr (>= 1.5),
+    MASS (>= 7.3-60),
     methods,
     Rdpack (>= 2.4),
     rlang (>= 1.1.0),
