--- a/NAMESPACE
+++ b/NAMESPACE
@@ -318,7 +318,11 @@ importFrom(grid,widthDetails)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(rlang,.data)
+importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
+importFrom(stats,qnorm)
+importFrom(stats,qt)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
