Adding Bland- Altman statistical function (#1135)
# Pull Request

I have added the Bland-Altman sfunction, which can be used to assess the
agreement between two quantitative methods of measurement. Please kindly
help to review the code.

Thanks,
Chanjuan

---------

Signed-off-by: Joe Zhu <joe.zhu@roche.com>
Co-authored-by: Davide Garolini <davide.garolini@roche.com>
Co-authored-by: Joe Zhu <joe.zhu@roche.com>
Co-authored-by: shajoezhu <sha.joe.zhu@gmail.com>
Co-authored-by: Donghang Li <49694928+dl1248@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -90,6 +90,7 @@ Collate:
     'analyze_variables.R'
     'analyze_vars_in_cols.R'
     'argument_convention.R'
+    'bland_altman.R'
     'combination_function.R'
     'compare_variables.R'
     'control_incidence_rate.R'
