--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ export(format_fraction_fixed_dp)
 export(format_fraction_threshold)
 export(format_sigfig)
 export(format_xx)
+export(g_bland_altman)
 export(g_forest)
 export(g_ipp)
 export(g_km)
@@ -243,6 +244,7 @@ export(prop_wilson)
 export(reapply_varlabels)
 export(ref_group_position)
 export(rtable2gg)
+export(s_bland_altman)
 export(s_compare)
 export(s_count_occurrences)
 export(s_count_occurrences_by_grade)
@@ -316,7 +318,11 @@ importFrom(grid,widthDetails)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(rlang,.data)
+importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
+importFrom(stats,qnorm)
+importFrom(stats,qt)
+importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
