--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,6 +57,7 @@ Suggests:
     stringr (>= 1.4.1),
     svglite (>= 2.1.2),
     testthat (>= 3.1.9),
+    withr (>= 2.0.0),
     vdiffr (>= 1.0.7)
 VignetteBuilder:
     knitr
@@ -70,7 +71,7 @@ Config/Needs/verdepcheck: insightsengineering/rtables, tidymodels/broom,
     GeoBosh/Rdpack, r-lib/rlang, r-lib/scales, tidyverse/tibble,
     tidyverse/tidyr, yihui/knitr, deepayan/lattice, tidyverse/lubridate,
     insightsengineering/nestcolor, rstudio/rmarkdown, tidyverse/stringr,
-    r-lib/svglite, r-lib/testthat, r-lib/vdiffr
+    r-lib/svglite, r-lib/testthat, r-lib/withr, r-lib/vdiffr
 Config/Needs/website: insightsengineering/nesttemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
