--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,26 +15,42 @@ repos:
       - id: roxygenize
         name: Regenerate package documentation
         additional_dependencies:
-          - checkmate
-          - digest
-          - dplyr
-          - ggplot2
-          - glue
-          - grDevices
-          - lifecycle
-          - logger
-          - magrittr
-          - methods
-          - bioc::MultiAssayExperiment
-          - R6
-          - rlang
           - rtables
-          - shinyjs
-          - shinyWidgets
+          - broom
+          - car
+          - checkmate
+          - cowplot
+          - dplyr
+          - emmeans
+          - forcats
+          - formatters
+          - ggplot2
+          - grid
+          - gridExtra
+          - gtable
+          - labeling
+          - lifecycle
+          - magrittr
+          - MASS
+          - methods
+          - Rdpack
+          - rlang
+          - scales
           - stats
-          - bioc::SummarizedExperiment
+          - survival
+          - tibble
+          - tidyr
           - utils
-          - yaml
+          - knitr
+          - lattice
+          - lubridate
+          - nestcolor
+          - rmarkdown
+          - stringr
+          - svglite
+          - testthat
+          - withr
+          - vdiffr
       - id: spell-check
         name: Check spelling with `spelling`
         exclude: >
