--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Authors@R: c(
 Description: Table, Listings, and Graphs (TLG) library for common outputs
     used in clinical trials.
 License: Apache License 2.0
-URL: https://github.com/insightsengineering/tern
+URL: https://insightsengineering.github.io/tern/,
+    https://github.com/insightsengineering/tern/
 BugReports: https://github.com/insightsengineering/tern/issues
 Depends:
     R (>= 3.6),
