--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(g_bland_altman)
 export(g_forest)
 export(g_ipp)
 export(g_km)
+export(g_km_new)
 export(g_lineplot)
 export(g_step)
 export(g_waterfall)
