Add functions for controlling annot table args

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export(combine_levels)
 export(combine_vectors)
 export(compare_vars)
 export(control_analyze_vars)
+export(control_annot_coxph)
+export(control_annot_surv_med)
 export(control_coxph)
 export(control_coxreg)
 export(control_incidence_rate)
