--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,15 +51,15 @@ export(combine_levels)
 export(combine_vectors)
 export(compare_vars)
 export(control_analyze_vars)
-export(control_annot_coxph)
-export(control_annot_surv_med)
 export(control_coxph)
+export(control_coxph_annot)
 export(control_coxreg)
 export(control_incidence_rate)
 export(control_lineplot_vars)
 export(control_logistic)
 export(control_step)
 export(control_summarize_vars)
+export(control_surv_med_annot)
 export(control_surv_time)
 export(control_surv_timepoint)
 export(count_abnormal)
@@ -130,7 +130,7 @@ export(g_bland_altman)
 export(g_forest)
 export(g_ipp)
 export(g_km)
-export(g_km_new)
+export(g_km_old)
 export(g_lineplot)
 export(g_step)
 export(g_waterfall)
