--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,6 @@ Imports:
     forcats (>= 1.0.0),
     formatters (>= 0.5.5),
     ggplot2 (>= 3.5.0),
-    ggsurvfit (>= 1.0.0),
     grid,
     gridExtra (>= 2.0.0),
     gtable (>= 0.3.0),
@@ -75,7 +74,7 @@ Config/Needs/verdepcheck: insightsengineering/rtables, tidymodels/broom,
     GeoBosh/Rdpack, r-lib/rlang, r-lib/scales, tidyverse/tibble,
     tidyverse/tidyr, yihui/knitr, deepayan/lattice, tidyverse/lubridate,
     insightsengineering/nestcolor, rstudio/rmarkdown, tidyverse/stringr,
-    r-lib/svglite, r-lib/testthat, r-lib/withr, pharmaverse/ggsurvfit
+    r-lib/svglite, r-lib/testthat, r-lib/withr
 Config/Needs/website: insightsengineering/nesttemplate
 Config/testthat/edition: 3
 Encoding: UTF-8
