--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,11 +51,13 @@ export(combine_vectors)
 export(compare_vars)
 export(control_analyze_vars)
 export(control_coxph)
+export(control_coxph_annot)
 export(control_coxreg)
 export(control_incidence_rate)
 export(control_lineplot_vars)
 export(control_logistic)
 export(control_step)
+export(control_surv_med_annot)
 export(control_surv_time)
 export(control_surv_timepoint)
 export(count_abnormal)
