--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -16,107 +16,104 @@ on:
   workflow_dispatch:
 
 jobs:
-  # audit:
-  #   name: Audit Dependencies 🕵️‍♂️
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/audit.yaml@main
-  # r-cmd:
-  #   name: R CMD Check 🧬
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  #   with:
-  #     additional-env-vars: |
-  #       _R_CHECK_CRAN_INCOMING_REMOTE_=false
-  #     additional-r-cmd-check-params: --as-cran
-  #     enforce-note-blocklist: true
-  #     note-blocklist: |
-  #       checking dependencies in R code .* NOTE
-  #       checking R code for possible problems .* NOTE
-  #       checking examples .* NOTE
-  #       checking Rd line widths .* NOTE
-  #       checking S3 generic/method consistency .* NOTE
-  #       checking Rd .usage sections .* NOTE
-  #       checking for unstated dependencies in vignettes .* NOTE
-  #       checking top-level files .* NOTE
-  #     unit-test-report-brand: >-
-  #       https://raw.githubusercontent.com/insightsengineering/hex-stickers/main/thumbs/tern.png
-  # r-cmd-non-cran:
-  #   name: R CMD Check (non-CRAN) 🧬
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  #   with:
-  #     additional-env-vars: |
-  #       _R_CHECK_CRAN_INCOMING_REMOTE_=false
-  #     enforce-note-blocklist: true
-  #     publish-unit-test-report-gh-pages: false
-  #     junit-xml-comparison: false
-  #     concurrency-group: non-cran
-  #     disable-unit-test-reports: true
-  #     skip-r-cmd-install: true
-  #     note-blocklist: |
-  #       checking dependencies in R code .* NOTE
-  #       checking R code for possible problems .* NOTE
-  #       checking examples .* NOTE
-  #       checking Rd line widths .* NOTE
-  #       checking S3 generic/method consistency .* NOTE
-  #       checking Rd .usage sections .* NOTE
-  #       checking for unstated dependencies in vignettes .* NOTE
-  #       checking top-level files .* NOTE
-  #     unit-test-report-brand: >-
-  #       https://raw.githubusercontent.com/insightsengineering/hex-stickers/main/thumbs/tern.png
-  # coverage:
-  #   name: Coverage 📔
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  # linter:
-  #   if: github.event_name != 'push'
-  #   name: SuperLinter 🦸‍♀️
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/linter.yaml@main
-  # roxygen:
-  #   name: Roxygen 🅾
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/roxygen.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  #   with:
-  #     auto-update: true
-  # gitleaks:
-  #   name: gitleaks 💧
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/gitleaks.yaml@main
-  # spelling:
-  #   name: Spell Check 🆎
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/spelling.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  # links:
-  #   if: github.event_name != 'push'
-  #   name: Check URLs 🌐
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/links.yaml@main
-  # vbump:
-  #   name: Version Bump 🤜🤛
-  #   if: github.event_name == 'push'
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/version-bump.yaml@main
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  # version:
-  #   name: Version Check 🏁
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/version.yaml@main
-  # licenses:
-  #   name: License Check 🃏
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/licenses.yaml@main
-  # style:
-  #   if: github.event_name != 'push'
-  #   name: Style Check 👗
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/style.yaml@main
-  #   with:
-  #     auto-update: true
-  #   secrets:
-  #     REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
-  # grammar:
-  #   if: github.event_name != 'push'
-  #   name: Grammar Check 🔤
-  #   uses: insightsengineering/r.pkg.template/.github/workflows/grammar.yaml@main
-  revdepcheck:
-    name: revdepcheck ↩️
-    uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@initialize-revdepcheck-action
+  audit:
+    name: Audit Dependencies 🕵️‍♂️
+    uses: insightsengineering/r.pkg.template/.github/workflows/audit.yaml@main
+  r-cmd:
+    name: R CMD Check 🧬
+    uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+    with:
+      additional-env-vars: |
+        _R_CHECK_CRAN_INCOMING_REMOTE_=false
+      additional-r-cmd-check-params: --as-cran
+      enforce-note-blocklist: true
+      note-blocklist: |
+        checking dependencies in R code .* NOTE
+        checking R code for possible problems .* NOTE
+        checking examples .* NOTE
+        checking Rd line widths .* NOTE
+        checking S3 generic/method consistency .* NOTE
+        checking Rd .usage sections .* NOTE
+        checking for unstated dependencies in vignettes .* NOTE
+        checking top-level files .* NOTE
+      unit-test-report-brand: >-
+        https://raw.githubusercontent.com/insightsengineering/hex-stickers/main/thumbs/tern.png
+  r-cmd-non-cran:
+    name: R CMD Check (non-CRAN) 🧬
+    uses: insightsengineering/r.pkg.template/.github/workflows/build-check-install.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+    with:
+      additional-env-vars: |
+        _R_CHECK_CRAN_INCOMING_REMOTE_=false
+      enforce-note-blocklist: true
+      publish-unit-test-report-gh-pages: false
+      junit-xml-comparison: false
+      concurrency-group: non-cran
+      disable-unit-test-reports: true
+      skip-r-cmd-install: true
+      note-blocklist: |
+        checking dependencies in R code .* NOTE
+        checking R code for possible problems .* NOTE
+        checking examples .* NOTE
+        checking Rd line widths .* NOTE
+        checking S3 generic/method consistency .* NOTE
+        checking Rd .usage sections .* NOTE
+        checking for unstated dependencies in vignettes .* NOTE
+        checking top-level files .* NOTE
+      unit-test-report-brand: >-
+        https://raw.githubusercontent.com/insightsengineering/hex-stickers/main/thumbs/tern.png
+  coverage:
+    name: Coverage 📔
+    uses: insightsengineering/r.pkg.template/.github/workflows/test-coverage.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+  linter:
+    if: github.event_name != 'push'
+    name: SuperLinter 🦸‍♀️
+    uses: insightsengineering/r.pkg.template/.github/workflows/linter.yaml@main
+  roxygen:
+    name: Roxygen 🅾
+    uses: insightsengineering/r.pkg.template/.github/workflows/roxygen.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+    with:
+      auto-update: true
+  gitleaks:
+    name: gitleaks 💧
+    uses: insightsengineering/r.pkg.template/.github/workflows/gitleaks.yaml@main
+  spelling:
+    name: Spell Check 🆎
+    uses: insightsengineering/r.pkg.template/.github/workflows/spelling.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+  links:
+    if: github.event_name != 'push'
+    name: Check URLs 🌐
+    uses: insightsengineering/r.pkg.template/.github/workflows/links.yaml@main
+  vbump:
+    name: Version Bump 🤜🤛
+    if: github.event_name == 'push'
+    uses: insightsengineering/r.pkg.template/.github/workflows/version-bump.yaml@main
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+  version:
+    name: Version Check 🏁
+    uses: insightsengineering/r.pkg.template/.github/workflows/version.yaml@main
+  licenses:
+    name: License Check 🃏
+    uses: insightsengineering/r.pkg.template/.github/workflows/licenses.yaml@main
+  style:
+    if: github.event_name != 'push'
+    name: Style Check 👗
+    uses: insightsengineering/r.pkg.template/.github/workflows/style.yaml@main
+    with:
+      auto-update: true
+    secrets:
+      REPO_GITHUB_TOKEN: ${{ secrets.REPO_GITHUB_TOKEN }}
+  grammar:
+    if: github.event_name != 'push'
+    name: Grammar Check 🔤
+    uses: insightsengineering/r.pkg.template/.github/workflows/grammar.yaml@main
