--- a/.github/workflows/on-demand.yaml
+++ b/.github/workflows/on-demand.yaml
@@ -1,9 +1,12 @@
 ---
-name: revdepcheck ⏪
+name: On-demand 🧑‍🔬
 
 on:
   schedule:
     - cron: '45 3 * * 0'
+  push:
+    branches:
+      - initialize-revdepcheck-action
   workflow_dispatch:
 
 jobs:
