--- a/.github/workflows/on-demand.yaml
+++ b/.github/workflows/on-demand.yaml
@@ -9,4 +9,4 @@ on:
 jobs:
   revdepcheck:
     name: revdepcheck ↩️
-    uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@initialize-revdepcheck-action
+    uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@main
