--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Feature description
       description: |
-Do not use this form to ask a question, or ask for assistance. Instead, ask on https://stackoverflow.com/ using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response. 
+Do not use this form to ask a question, or ask for assistance. Instead, ask on [Stackoverflow](https://stackoverflow.com/) using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response. 
 
 Is your feature request related to a problem? Please describe. A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
 
