--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -8,15 +8,13 @@ body:
     attributes:
       label: Feature description
       description: |
-Do not use this form to ask a question, or ask for assistance. Instead, ask on [Stackoverflow](https://stackoverflow.com/) using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response. 
-
-Is your feature request related to a problem? Please describe. A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
-
-Describe the solution you'd like A clear and concise description of what you want to happen.
-
-Describe alternatives you've considered A clear and concise description of any alternative solutions or features you've considered.
-
-Additional context Add any other context or screenshots about the feature request here.
+        Do not use this form to ask a question, or ask for assistance. Instead, ask on [Stackoverflow](https://stackoverflow.com/)\
+        using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response.\n\n
+        Is your feature request related to a problem? Please describe. A clear and concise description of what the problem is. Ex. \
+        I'm always frustrated when [...]\n\n
+        Describe the solution you'd like A clear and concise description of what you want to happen.\n\n
+        Describe alternatives you've considered A clear and concise description of any alternative solutions or features you've considered.\n\n
+        Additional context Add any other context or screenshots about the feature request here.
     validations:
       required: true
   - type: checkboxes
