--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -10,7 +10,7 @@ body:
       description: |
         Do not use this form to ask a question, or ask for assistance. Instead, ask on [Stackoverflow](https://stackoverflow.com/)\
         using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response.\n\n
-        Is your feature request related to a problem? Please describe. A clear and concise description of what the problem. \n\n
+        Is your feature request related to a problem? Please describe with a clear and concise description of the problem. \n\n
         Describe the solution you'd like A clear and concise description of what you want to happen.
     validations:
       required: true
