update feature yml (#1270)
# Pull Request

<!--- Replace `#nnn` with your issue link for reference. -->

Fixes #nnn

---------

Signed-off-by: Joe Zhu <sha.joe.zhu@gmail.com>
Co-authored-by: Davide Garolini <davide.garolini@roche.com>

--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -7,6 +7,11 @@ body:
   - type: textarea
     attributes:
       label: Feature description
+      description: |
+        Do not use this form to ask a question, or ask for assistance. Instead, ask on [Stackoverflow](https://stackoverflow.com/)\
+        using the `nest-rtables` and `nest-tern` tags. Questions about a function's use will be closed without a response.\n\n
+        Is your feature request related to a problem? Please describe with a clear and concise description of the problem. \n\n
+        Could you describe the solution you would like? Please provide a clear and concise description of what you want to happen.
     validations:
       required: true
   - type: checkboxes
