fixes and details

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ export(h_or_cat_interaction)
 export(h_or_cont_interaction)
 export(h_or_interaction)
 export(h_pkparam_sort)
+export(h_ppmeans)
 export(h_proportion_df)
 export(h_proportion_subgroups_df)
 export(h_row_counts)
