--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,6 +16,8 @@ navbar:
           href: coverage-report/
         - text: Unit test report
           href: unit-test-report/
+        - text: Non-CRAN unit test report
+          href: unit-test-report-non-cran/
     github:
       icon: fa-github
       href: https://github.com/insightsengineering/tern
