chore: set NOT_CRAN variable

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -48,6 +48,7 @@ jobs:
     with:
       additional-env-vars: |
         _R_CHECK_CRAN_INCOMING_REMOTE_=false
+        NOT_CRAN=true
       enforce-note-blocklist: true
       concurrency-group: non-cran
       unit-test-report-directory: unit-test-report-non-cran
