Add control func

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(control_coxreg)
 export(control_incidence_rate)
 export(control_lineplot_vars)
 export(control_logistic)
+export(control_riskdiff)
 export(control_step)
 export(control_surv_med_annot)
 export(control_surv_time)
