add lookup-refs param to rhub workflow

--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -39,3 +39,7 @@ jobs:
   rhub:
     name: R-hub 🌐
     uses: insightsengineering/r.pkg.template/.github/workflows/rhub.yaml@main
+    with:
+      lookup-refs: |
+        insightsengineering/rtables
+        insightsengineering/formatters
