chore: update workflows

--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -5,9 +5,26 @@ on:
   schedule:
     - cron: '45 3 * * 0'
   workflow_dispatch:
+    inputs:
+      chosen-workflow:
+        description: |
+          Select which workflow you'd like to run
+        required: true
+        type: choice
+        default: rhub
+        options:
+          - rhub
+          - dependency-test
+          - branch-cleanup
+          - revdepcheck
 
 jobs:
   dependency-test:
+    if: >
+      github.event_name == 'schedule' || (
+        github.event_name == 'workflow_dispatch' &&
+        inputs.chosen-workflow == 'dependency-test'
+      )
     strategy:
       fail-fast: false
       matrix:
@@ -24,6 +41,11 @@ jobs:
       extra-deps: |
         lme4 (>= 1.1-35)
   branch-cleanup:
+    if: >
+      github.event_name == 'schedule' || (
+        github.event_name == 'workflow_dispatch' &&
+        inputs.chosen-workflow == 'branch-cleanup'
+      )
     name: Branch Cleanup 🧹
     uses: insightsengineering/r.pkg.template/.github/workflows/branch-cleanup.yaml@main
     secrets:
@@ -34,9 +56,19 @@ jobs:
     with:
       issue-assignees: "shajoezhu,Melkiades,edelarua,gmbecker,ayogasekaram"
   revdepcheck:
+    if: >
+      github.event_name == 'schedule' || (
+        github.event_name == 'workflow_dispatch' &&
+        inputs.chosen-workflow == 'revdepcheck'
+      )
     name: revdepcheck ↩️
     uses: insightsengineering/r.pkg.template/.github/workflows/revdepcheck.yaml@main
   rhub:
+    if: >
+      github.event_name == 'schedule' || (
+        github.event_name == 'workflow_dispatch' &&
+        inputs.chosen-workflow == 'rhub'
+      )
     name: R-hub 🌐
     uses: insightsengineering/r.pkg.template/.github/workflows/rhub.yaml@main
     with:
