Export a_incidence_rate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(a_count_patients_with_event)
 export(a_count_patients_with_flags)
 export(a_count_values)
 export(a_coxreg)
+export(a_incidence_rate)
 export(a_length_proportion)
 export(a_odds_ratio)
 export(a_proportion)
