Refactor `estimate_incidence_rate` (#1300)
# Pull Request

Fixes #1299

---------

Signed-off-by: Davide Garolini <davide.garolini@roche.com>
Signed-off-by: Joe Zhu <joe.zhu@roche.com>
Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Davide Garolini <davide.garolini@roche.com>
Co-authored-by: Joe Zhu <joe.zhu@roche.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -131,6 +131,7 @@ Collate:
     'h_adsl_adlb_merge_using_worst_flag.R'
     'h_biomarkers_subgroups.R'
     'h_cox_regression.R'
+    'h_incidence_rate.R'
     'h_km.R'
     'h_logistic_regression.R'
     'h_map_for_count_abnormal.R'
