--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,7 @@ repos:
           - magrittr
           - MASS
           - methods
+          - nestcolor
           - Rdpack
           - rlang
           - scales
