--- a/NAMESPACE
+++ b/NAMESPACE
@@ -316,6 +316,7 @@ importFrom(grid,validDetails)
 importFrom(grid,widthDetails)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
+importFrom(nestcolor,theme_nest)
 importFrom(rlang,.data)
 importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
