update and rebuild rd files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -144,6 +144,8 @@ Collate:
     'h_survival_duration_subgroups.R'
     'imputation_rule.R'
     'incidence_rate.R'
+    'individual_patient_plot.R'
+    'kaplan_meier_plot.R'
     'logistic_regression.R'
     'missing_data.R'
     'odds_ratio.R'
@@ -166,6 +168,7 @@ Collate:
     'summarize_glm_count.R'
     'summarize_num_patients.R'
     'summarize_patients_exposure_in_cols.R'
+    'summarize_variables.R'
     'survival_biomarkers_subgroups.R'
     'survival_coxph_pairwise.R'
     'survival_duration_subgroups.R'
