--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,11 +131,11 @@ export(g_km)
 export(g_lineplot)
 export(g_step)
 export(g_waterfall)
-export(get_and_check_stats_names)
 export(get_formats_from_stats)
 export(get_indents_from_stats)
 export(get_labels_from_stats)
 export(get_smooths)
+export(get_stat_names)
 export(get_stats)
 export(groups_list_to_df)
 export(h_adlb_abnormal_by_worst_grade)
@@ -295,7 +295,6 @@ export(tabulate_survival_biomarkers)
 export(tabulate_survival_subgroups)
 export(tern_default_formats)
 export(tern_default_labels)
-export(tern_default_stat_names)
 export(tern_default_stats)
 export(test_proportion_diff)
 export(to_n)
