Refactoring of `analyze_vars` with specifics for .stat_names (#1361)
# Pull Request

Fixes #1352

---------

Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Joe Zhu <joe.zhu@roche.com>
Co-authored-by: Emily de la Rua <emily.de_la_rua@contractors.roche.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ export(get_formats_from_stats)
 export(get_indents_from_stats)
 export(get_labels_from_stats)
 export(get_smooths)
+export(get_stat_names)
 export(get_stats)
 export(groups_list_to_df)
 export(h_adlb_abnormal_by_worst_grade)
