--- a/NAMESPACE
+++ b/NAMESPACE
@@ -318,6 +318,7 @@ importFrom(grid,widthDetails)
 importFrom(magrittr,"%>%")
 importFrom(methods,new)
 importFrom(nestcolor,theme_nest)
+importFrom(rlang,"%||%")
 importFrom(rlang,.data)
 importFrom(stats,complete.cases)
 importFrom(stats,pchisq)
