as_factor_keep_attributes is open now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(analyze_vars_in_cols)
 export(append_varlabels)
 export(arrange_grobs)
 export(as.rtable)
+export(as_factor_keep_attributes)
 export(combine_counts)
 export(combine_groups)
 export(combine_levels)
