--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -105,6 +105,7 @@ reference:
       - -starts_with("h_grob_")
       - -starts_with("h_row_")
       - -h_split_param
+      - -h_tab_one_biomarker
       - -h_xticks
       - -prop_diff
 
@@ -203,6 +204,7 @@ reference:
       - h_grob_y_annot
       - h_km_layout
       - h_split_param
+      - h_tab_one_biomarker
       - stack_grobs
       - arrange_grobs
       - draw_grob
