--- a/.revdeprefs.yaml
+++ b/.revdeprefs.yaml
@@ -1,2 +1,7 @@
 - insightsengineering/chevron
 - insightsengineering/teal.modules.clinical
+- insightsengineering/scda.test
+- insightsengineering/autoslider.core
+- insightsengineering/tern.gee
+- insightsengineering/tern.mmrm
+- insightsengineering/tern.rbmi
