--- a/NAMESPACE
+++ b/NAMESPACE
@@ -330,3 +330,4 @@ importFrom(stats,setNames)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
+importFrom(utils,modifyList)
