first proposal on export some internal functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,11 @@ export(append_varlabels)
 export(arrange_grobs)
 export(as.rtable)
 export(as_factor_keep_attributes)
+export(assert_df_with_factors)
+export(assert_df_with_variables)
+export(assert_proportion_value)
+export(check_diff_prop_ci)
+export(clogit_with_tryCatch)
 export(combine_counts)
 export(combine_groups)
 export(combine_levels)
@@ -132,6 +137,7 @@ export(g_km)
 export(g_lineplot)
 export(g_step)
 export(g_waterfall)
+export(get_covariates)
 export(get_formats_from_stats)
 export(get_indents_from_stats)
 export(get_labels_from_stats)
@@ -226,6 +232,7 @@ export(has_fractions_difference)
 export(imputation_rule)
 export(keep_content_rows)
 export(keep_rows)
+export(labels_or_names)
 export(labels_use_control)
 export(level_order)
 export(logistic_regression_cols)
@@ -244,6 +251,7 @@ export(prop_jeffreys)
 export(prop_strat_wilson)
 export(prop_wald)
 export(prop_wilson)
+export(range_noinf)
 export(reapply_varlabels)
 export(ref_group_position)
 export(rtable2gg)
@@ -262,6 +270,8 @@ export(s_odds_ratio)
 export(s_proportion)
 export(s_proportion_diff)
 export(s_summary)
+export(s_surv_timepoint)
+export(s_test_proportion_diff)
 export(sas_na)
 export(score_occurrences)
 export(score_occurrences_cols)
