add test for clogit_with_tryCatch and assign range_noinf to formatting functions

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -140,6 +140,7 @@ reference:
           `rtables` package.
     contents:
       - starts_with("format_")
+      - range_noinf
 
   - title: rtables Scoring Functions
     desc: These functions can help with table sorting.
