1425 feature request export various internal functions for usage in jj based sister package to nest tern (#1426)
# Pull Request

addresses #1425, export several internal functions

---------

Signed-off-by: Ilse <55379552+iaugusty@users.noreply.github.com>
Co-authored-by: github-actions <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Davide Garolini <davide.garolini@roche.com>

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -63,6 +63,8 @@ reference:
       - -analyze_functions
       - -estimate_coef
       - -summarize_functions
+      - s_surv_timepoint
+      - s_test_proportion_diff
 
   - title: Model-Specific Functions
     desc: These functions help with fitting or extracting results from specific
@@ -75,6 +77,8 @@ reference:
       - starts_with("logistic_")
       - starts_with("tidy.")
       - univariate
+      - get_covariates
+      - clogit_with_tryCatch
 
   - title: Graphs
     desc: These function create graphical type output.
@@ -107,6 +111,7 @@ reference:
       - -h_tab_one_biomarker
       - -h_xticks
       - -prop_diff
+      - check_diff_prop_ci
 
   - title: rtables Helper Functions
     desc: These functions help to work with the `rtables` package and may be
@@ -128,12 +133,14 @@ reference:
       - to_string_matrix
       - groups_list_to_df
       - utils_split_funs
+      - labels_or_names
 
   - title: rtables Formatting Functions
     desc: These functions provide customized formatting rules to work with the
           `rtables` package.
     contents:
       - starts_with("format_")
+      - range_noinf
 
   - title: rtables Scoring Functions
     desc: These functions can help with table sorting.
