unification of NAs behavior

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(d_test_proportion_diff)
 export(day2month)
 export(decorate_grob)
 export(decorate_grob_set)
+export(default_drop_na)
 export(default_na_str)
 export(df_explicit_na)
 export(draw_grob)
@@ -277,6 +278,7 @@ export(score_occurrences)
 export(score_occurrences_cols)
 export(score_occurrences_cont_cols)
 export(score_occurrences_subtable)
+export(set_default_drop_na)
 export(set_default_na_str)
 export(split_cols_by_groups)
 export(stack_grobs)
