Update package version requirements in DESCRIPTION
Signed-off-by: Joe Zhu <joe.zhu@roche.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -61,10 +61,11 @@ Suggests:
     knitr (>= 1.42),
     lattice (>= 0.18-4),
     lubridate (>= 1.7.9),
-    rmarkdown (>= 2.28),
+    rmarkdown (>= 2.23),
     stringr (>= 1.4.1),
+    sass (>= 0.4.10),
     svglite (>= 2.1.2),
-    testthat (>= 3.2.1.1),
+    testthat (>= 3.1.9),
     withr (>= 2.0.0)
 VignetteBuilder:
     knitr,
