--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,10 +31,10 @@ Depends:
     R (>= 4.4.0),
     rtables (>= 0.6.13)
 Imports:
-    broom (>= 0.5.4),
-    car (>= 3.0-13),
-    checkmate (>= 2.1.0),
-    cowplot (>= 1.0.0),
+    broom (>= 1.0.8),
+    car (>= 3.1-3),
+    checkmate (>= 2.3.2),
+    cowplot (>= 1.1.3),
     dplyr (>= 1.0.0),
     emmeans (>= 1.10.4),
     forcats (>= 1.0.0),
@@ -54,7 +54,7 @@ Imports:
     scales (>= 1.2.0),
     stats,
     survival (>= 3.8-3),
-    tibble (>= 2.0.0),
+    tibble (>= 3.2.1),
     tidyr (>= 0.8.3),
     utils
 Suggests:
@@ -63,6 +63,7 @@ Suggests:
     lubridate (>= 1.7.9),
     rmarkdown (>= 2.23),
     stringr (>= 1.4.1),
+    sass (>= 0.4.10),
     svglite (>= 2.1.2),
     testthat (>= 3.1.9),
     withr (>= 2.0.0)
