--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,16 @@ Authors@R: c(
     person("Jana", "Stoilova", , "jana.stoilova@roche.com", role = "aut"),
     person("Davide", "Garolini", , "davide.garolini@roche.com", role = "aut",
            comment = c(ORCID = "0000-0002-1445-1369")),
-    person("Emily", "de la Rua", , "emily.de_la_rua@contractors.roche.com", role = "aut",
+    person("Emily", "de la Rua", , "emilydelarua@gmail.com", role = "aut",
            comment = c(ORCID = "0009-0000-8738-5561")),
-    person("Abinaya", "Yogasekaram", , "abinaya.yogasekaram@contractors.roche.com", role = "aut",
+    person("Abinaya", "Yogasekaram", , "ayogasek@gmail.com", role = "aut",
            comment = c(ORCID = "0009-0005-2083-1105")),
-    person("Heng", "Wang", , "wang.heng@gene.com", role = "aut"),
+    person("Heng", "Wang", , "Heng.Wang21@gilead.com", role = "aut"),
     person("Francois", "Collin", role = "aut"),
     person("Adrian", "Waddell", , "adrian.waddell@gene.com", role = "aut"),
     person("Pawel", "Rucki", , "pawel.rucki@roche.com", role = "aut"),
-    person("Chendi", "Liao", , "chendi.liao@roche.com", role = "aut"),
-    person("Jennifer", "Li", , "li.jing@gene.com", role = "aut"),
+    person("Chendi", "Liao", , , role = "aut"),
+    person("Jennifer", "Li", , , role = "aut"),
     person("F. Hoffmann-La Roche AG", role = c("cph", "fnd"))
   )
 Description: Table, Listings, and Graphs (TLG) library for common outputs
